package com.raizesdonordeste.backendapi.model;

public enum CanalPedido {
    APP, TOTEM, BALCAO, WEB, PICKUP
}