package com.raizesdonordeste.backendapi.model;

public enum FinalidadeConsentimento {
    FIDELIDADE
}
