package com.raizesdonordeste.backendapi.model;

public enum FormaPagamento {
    PIX,
    CARTAO,
    DINHEIRO
}