package com.raizesdonordeste.backendapi.model;

public enum Perfil {
    CLIENTE,
    ATENDENTE,
    COZINHA,
    GERENTE,
    ADMIN
}