package com.raizesdonordeste.backendapi.model;

public enum StatusPedido {
    AGUARDANDO_PAGAMENTO,
    RECEBIDO,
    EM_PREPARACAO,
    PRONTO,
    ENTREGUE,
    CANCELADO
}
