package com.raizesdonordeste.backendapi.model;

public enum TipoDesconto {
    PERCENTUAL,
    NOMINAL
}