package com.raizesdonordeste.backendapi.model;

public enum TipoMovimentacaoEstoque {
    ENTRADA,
    SAIDA
}
